reactor: implement share for pool
